--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,28 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
-repositories {
-	mavenCentral()
-}
-
-subprojects {
+allprojects {
 	group = 'com.example'
 	version = '0.0.1'
 
-	apply plugin: 'java'
-	apply plugin: 'org.springframework.boot'
-	apply plugin: 'io.spring.dependency-management'
+	repositories {
+		mavenCentral()
+	}
 
 	java {
 		toolchain {
 			languageVersion = JavaLanguageVersion.of(17)
 		}
+	}
+}
+
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+
+	java {
+		sourceCompatibility = JavaVersion.VERSION_17
 	}
 
 	repositories {
